text alignment fixed

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ body {
     font-size: 25px;
     padding-top: 9px;
     font-weight: 450;
+    padding-right: 190px;
 }
 
 .ready {
